Made another change

--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
                 <label for="comments">Comments</label><br />
                 <textarea name="comments2" id="comments" cols="45" rows="5" tabindex="270"></textarea>
               </p>
-              <p>Would you like to receive our monthly tour specials newsletter? No, we don't spam or share your information with anyone else. Read our <a href="privacy.html">privacy policy</a>.</p>
+              <p>Would you like to receive our monthly cool tour specials newsletter? No, we don't spam or share your information with anyone else. Read our <a href="privacy.html">privacy policy</a>.</p>
               <p>
                 <input type="radio" name="newsletter" id="newsletter_yes" value="yes" tabindex="280">
                 <label for="newsletter_yes" class="inline break">Please send me the newsletter!</label>
