--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
                 </p>
                 <p>
                   <input type="checkbox" name="taste" id="taste" tabindex="260">
-                  <label for="taste">Taste of California</label>
+                  <label for="taste">Taste of California!</label>
                 </p>
               </div>
               <p class="clear">
